Make seekbar draggable, add backwards/forwards indicator on mobile when double clicking, over fixes

--- a/websites/static/css/catalogue.css
+++ b/websites/static/css/catalogue.css
@@ -307,6 +307,40 @@
 	appearance: none;
 }
 
+.player_extra_movement {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.player_extra_backward, .player_extra_forward {
+	width: max(10vw, 5em);
+	height: max(10vw, 5em);
+	margin: 2em;
+	background: rgba(var(--always-negative-color), 0.5);
+	border-radius: 100%;
+	transition: opacity .6s ease;
+	opacity: 0;
+	z-index: 1;
+	font-size: 1.3em;
+	pointer-events: none;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.player_extra_backward_time, .player_extra_forward_time {
+	font-family: "lexend_deca_numbers", sans-serif;
+}
+
+.player_extra_backward .fas, .player_extra_forward .fas {
+	font-size: 1.8em;
+}
+
 .player_extra_ended {
 	display: none;
 	position: absolute;
